--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -23,7 +23,7 @@ jobs:
         python -m pip install --upgrade pip
     
 
-    - name: Run tests
-      run: |
-        python -m pytest
+    # - name: Run tests
+    #   run: |
+    #     python -m pytest
 
