--- a/Pipfile
+++ b/Pipfile
@@ -4,6 +4,16 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
+flask-jwt-extended = "*"
+flask = "*"
+flask-sqlalchemy = "*"
+sqlalchemy-serializer = "*"
+flask-migrate = "*"
+sqlalchemy = "*"
+flask-restful = "*"
+flask-cors = "*"
+flask-bcrypt = "*"
+cloudinary = "*"
 
 [dev-packages]
 
